# open-image-models

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  codeql-analysis.yaml  main.yaml  release.yaml  secret-scanning.yaml  test.yaml  workflow-lint.yaml
0.1.0/: 404.html  index.html  objects.inv
0.1.0/contributing/: index.html
0.1.0/installation/: index.html
0.1.0/reference/: index.html
0.1.0/search/: search_index.json
0.2/: 404.html  index.html  objects.inv
0.2/contributing/: index.html
0.2/installation/: index.html
0.2/reference/: index.html
0.2/search/: search_index.json
0.3/: index.html
0.3/contributing/: index.html
0.3/installation/: index.html
0.3/search/: search_index.json
0.4/: 404.html  objects.inv
0.4/installation/: index.html
0.4/reference/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html
0.5/contributing/: index.html
0.5/installation/: index.html
0.5/reference/: index.html
docs/: contributing.md  index.md  installation.md  reference.md
open_image_models/: __init__.py  utils.py
open_image_models/detection/core/: base.py  hub.py
open_image_models/detection/core/yolo_v9/: inference.py  postprocess.py  preprocess.py
open_image_models/detection/pipeline/: license_plate.py
test/open_image_models/detection/core/: test_base.py  test_hub.py
test/open_image_models/detection/core/yolo_v9/: test_inference.py  test_postprocess.py  test_preprocess.py
