[tool.poetry]
name = "open-image-models"
version = "0.3.0"
description = "Pre-trained image models using ONNX for fast, out-of-the-box inference."
authors = ["ankandrew <61120139+ankandrew@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/ankandrew/open-image-models"
license = "MIT"
keywords = [
    "image-processing",
    "computer-vision",
    "deep-learning",
    "image-classification",
    "object-detection",
    "open-source-models",
    "onnx",
]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
onnxruntime = { version = ">=1.19.2" }
opencv-python = "*"
tqdm = "*"
rich = "*"

# ONNX package variants (for different hardware accelerator)
onnxruntime-gpu = { version = "*", optional = true }
onnxruntime-openvino = { version = "*", optional = true }
onnxruntime-directml = { version = "*", optional = true }
onnxruntime-qnn = { version = "*", optional = true }

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]
openvino = ["onnxruntime-openvino"]
directml = ["onnxruntime-directml"]
qnn = ["onnxruntime-qnn"]

[tool.poetry.group.test.dependencies]
pytest = "*"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
pylint = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "*"
mkdocstrings = { version = "*", extras = ["python"] }
mike = "*"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # Pylint
    "PL",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # pandas-vet
    "PD",
]
ignore = ["N812", "PLR2004", "PD011", "RUF046"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.pylint.typecheck]
generated-members = ["cv2.*"]
signature-mutators = [
    "click.decorators.option",
    "click.decorators.argument",
    "click.decorators.version_option",
    "click.decorators.help_option",
    "click.decorators.pass_context",
    "click.decorators.confirmation_option"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = ["missing-class-docstring", "missing-function-docstring", "wrong-import-order", "missing-module-docstring"]

[tool.pylint.design]
max-args = 8
min-public-methods = 1
max-attributes = 8
max-positional-arguments = 6

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"]

[tool.pylint.basic]
no-docstring-rgx = "^__|^test_"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
